[package]
name = "mystu_server"
version = "0.1.0"
edition = "2024"

[dependencies]
glacier = { path = "../glacier" }

tokio = { version = "1.44.1", features = ["full"] }

# json处理
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"

# 数据库处理
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"], default-features = false }
redis = { version = "0.29.2", features = [
    "tokio-comp",
], default-features = false }

# 工具处理
lettre = "0.11.15"
jsonwebtoken = "9.3.1"
rand = "0.9.0"

# 日志处理
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false
